--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                         }
                     });
                     
-                    // Toggle the clicked question
+                    // CURRENT
                     if (!isOpen) {
                         question.classList.add('active');
                         answer.style.maxHeight = answer.scrollHeight + "px";
